# AgentS_IA

./: .env.example  README.md  pyproject.toml  requirements.txt
cookbook/getting_started/: 01_basic_agent.py  02_agent_with_tools.py  03_agent_with_knowledge.py  README.md
docs/: examples.md  getting_started.md  troubleshooting.md
libs/agno/: setup.cfg  setup.py
libs/agno/agno/models/gemini/: __init__.py  chat.py  like.py
libs/agno/agno/models/google/: __init__.py  gemini_flash.py
libs/agno/agno/models/openai/: chat.py
libs/agno/agno/utils/: cache.py  cleanup.py  retry.py  token_counter.py
