# ==== Configuração de Instalação do Pacote ====
#
# Este arquivo configura como o pacote deve ser instalado e onde encontrar os módulos.
#
# Funções principais:
# 1. Definir a estrutura do pacote
# 2. Configurar requisitos do Python
# 3. Especificar quais módulos devem ser incluídos

[options]
# Usa find_packages() para descobrir automaticamente todos os pacotes
packages = find:
package_dir =
    = .
# Versão mínima do Python necessária
python_requires = >=3.8

[options.packages.find]
# Define onde procurar os pacotes
where = .
# Padrão para incluir pacotes
include = agno* 